RESOLVED FIXED 262009
[CSS] Fix serialization issues with clip-path & offset-path
https://bugs.webkit.org/show_bug.cgi?id=262009
Summary [CSS] Fix serialization issues with clip-path & offset-path
Tim Nguyen (:ntim)
Reported 2023-09-24 04:18:31 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-24 04:18:39 PDT
Tim Nguyen (:ntim)
Comment 2 2023-09-24 04:21:50 PDT
Tim Nguyen (:ntim)
Comment 3 2023-09-24 04:32:01 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/42139
EWS
Comment 4 2023-09-24 16:58:23 PDT
Committed 268379@main (70f48f9012f4): <https://commits.webkit.org/268379@main> Reviewed commits have been landed. Closing PR #18129 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.